workspace-sf/force-app/main/default/objects/FieldSetOrcamento__mdt/FieldSetOrcamento__mdt.object-meta.xml
<CustomObject>
    <description>Contém a relação dos field sets a serem utilizados no componente de Complemento Orçamento</description>
    <label>Field set de orçamento</label>
    <pluralLabel>Field sets de orçamento</pluralLabel>
</CustomObject>