workspace-sf/force-app/main/default/objects/FieldSetOrcamento__mdt/fields/CodigoProduto__c.field-meta.xml
<CustomField>
    <fullName>CodigoProduto__c</fullName>
    <label>Código do produto</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>