workspace-sf/force-app/main/default/objects/FieldSetOrcamento__mdt/fields/FieldSet__c.field-meta.xml
<CustomField>
    <fullName>FieldSet__c</fullName>
    <label>Field set</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>